Fix WhatsApp floating button visibility on desktop

--- a/css/style.css
+++ b/css/style.css
@@ -1492,7 +1492,7 @@ img {
 
 @media (min-width: 769px) {
   .whatsapp-fab {
-    display: none;
+    display: flex;
   }
 }
 
